--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ authors = [
 description = "Deltakit Textbook: An Introduction to Quantum Error Correction"
 readme = "README.md"
 license = "Apache-2.0"
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 classifiers = [
   "Development Status :: 1 - Planning",
   "Intended Audience :: Science/Research",
@@ -28,7 +28,14 @@ classifiers = [
   "Typing :: Typed",
 ]
 dynamic = ["version"]
-dependencies = []
+dependencies = [
+    "holoviews>=1.21.0",
+    "matplotlib>=3.10.6",
+    "mlx>=0.29.0",
+    "notebook>=7.4.5",
+    "numpy>=2.3.3",
+    "tqdm>=4.67.1",
+]
 
 [project.urls]
 Homepage = "https://github.com/deltakit/deltakit-textbook"
@@ -45,7 +52,7 @@ docs = [
   "sphinx_autodoc_typehints",
   "furo>=2023.08.17",
   "myst_nb>=1.2.0",
-  "sphinx_book_theme>=1.1.4",
+  "sphinxawesome-theme>=5.3.2,<6",
   "sphinx_design>=0.6.1",
   "matplotlib>=3.10.3",
   "cirq>=1.5.0",
